# share-platform

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  Untitled.ipynb  Untitled1.ipynb  conftest.py  install.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
jupyter-config/nb-config/: share-platform.json
jupyter-config/server-config/: share-platform.json
share-platform/: __init__.py  aip.py  handlers.py
share-platform/tests/: __init__.py  test_handlers.py
src/: handler.ts  index.ts
src/__tests__/: share-platform.spec.ts
ui-tests/: package.json
ui-tests/tests/: share-platform.spec.ts
